panels now show correctly on mobile safari

--- a/public/bootstrap/less/homepage-mobile.less
+++ b/public/bootstrap/less/homepage-mobile.less
@@ -14,6 +14,10 @@
   float:left;
 }
 
+#platform {
+  overflow: hidden;
+}
+
 #panelList {
   width: 200%;
   height: 100%;
@@ -40,7 +44,6 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
 html {
